# agent-design-language

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  REVIEW.md  SECURITY.md  default_4017920704806671331_0_42573.profraw  default_4017920704806671331_0_42729.profraw
adl/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
adl/config/: slow_proof_families.v0.91.6.json  validation_lane_selector.v0.91.6.json
adl/examples/: README.md  adl-0.1.yaml  failure-missing-file.adl.yaml  local-plugin-pattern.adl.yaml  override-precedence.adl.yaml  v0-2-coordinator-agents-sdk.adl.yaml  v0-2-coordinator-agents-sdk.md  v0-2-failure-unknown-field.adl.yaml  v0-2-failure-unknown-state-ref.adl.yaml  v0-2-multi-step-basic.adl.yaml  v0-2-multi-step-file-input.adl.yaml  v0-3-aee-recovery-initial.adl.yaml  v0-3-concurrency-fork-join.adl.yaml  v0-3-concurrency-fork-join.md  v0-3-demo-a-say-mcp.adl.yaml  v0-3-fork-join-seq-run.adl.yaml  v0-3-fork-join-seq-run.md  v0-3-on-error-retry.md  v0-3-remote-http-provider.adl.yaml  v0-3-remote-http-provider.md  v0-3-scheduler-max-concurrency.adl.yaml  v0-4-demo-fork-join.adl.yaml  v0-5-composition-hierarchical.adl.yaml  v0-5-pattern-fork-join.adl.yaml  v0-5-pattern-linear.adl.yaml  v0-5-remote-execution-mvp.adl.yaml  v0-6-hitl-no-pause.adl.yaml  v0-6-hitl-pause-resume.adl.yaml  v0-6-provider-profile-delegation.adl.yaml  v0-6-trace-sample-a.json  v0-7-enterprise-signed-remote.adl.yaml  v0-7-provider-portability-http-profile.adl.yaml  v0-87-1-minimal-runtime-demo.adl.yaml  v0-87-1-multi-agent-tea-discussion.adl.yaml  v0-87-1-provider-chatgpt-demo.adl.yaml  v0-87-1-provider-http-demo.adl.yaml  v0-87-1-provider-local-ollama-demo.adl.yaml  v0-87-1-provider-mock-demo.adl.yaml  v0-87-1-real-multi-agent-tea-discussion.adl.yaml  v0-88-paper-sonata.adl.yaml  (+12 more)
adl/identity/: identity_profile.v1.json
adl/schemas/: adl.schema.json  csm_operator_command_packet.v1.schema.json  csm_visibility_packet.v1.schema.json  structured_implementation_prompt.contract.yaml  structured_output_record.contract.yaml  structured_task_prompt.contract.yaml
adl/src/: acc.rs  adl.rs  adl_gws_context_mirror.rs  adl_gws_drive_sync.rs  adl_gws_native.rs  adversarial_execution_runner.rs  adversarial_runtime.rs  agent_comms.rs  artifacts.rs  aws_remote_validation.rs  capability_aptitude_testing.rs  chronosense.rs  cognitive_transition_schema.rs  continuous_verification_self_attack.rs  control_plane.rs  csdlc_prompt_editor.rs  csm_observatory.rs  dangerous_negative_suite.rs  delegation_refusal_coordination.rs  demo.rs  demo_proof_entry_points.rs  execution_plan.rs  exploit_artifact_replay.rs  freedom_gate.rs  governed_executor.rs  gws_live_capability_execution_surface.rs  gws_live_content_card_roundtrip.rs  gws_live_safety_package.rs  gws_live_test_support.rs  instrumentation.rs  learning_export.rs  lib.rs  local_gemma_model_evaluation.rs  long_lived_agent.rs  main.rs  model_identity.rs  model_proposal_benchmark.rs  observability.rs  obsmem_adapter.rs  obsmem_contract.rs  (+41 more)
adl/tests/: adl_tests.rs  cli_smoke.rs  demo_tests.rs  execute_tests.rs  file_inputs.rs  helpers.rs  instrument_tests.rs  local_gemma_model_evaluation_demo_tests.rs  local_ollama_provider_tests.rs  mock_provider_tests.rs  model_proposal_benchmark_demo_tests.rs  obsmem_validation_tests.rs  pr_small_binaries.rs  provider_tests.rs  remote_ollama_provider_tests.rs  resolve_tests.rs  schema_tests.rs  signing_tests.rs  uts_acc_multi_model_benchmark_demo_tests.rs
adl/tools/: BURST_FINAL_SUMMARY_TEMPLATE.md  BURST_PLAYBOOK.md  README.md  REPORT_SCHEMA.md  adl_provider_adapter.rs  archive_run_artifacts.sh  attach_post_merge_closeout.sh  attach_pr_janitor.sh  batched_checks.sh  branch_hygiene.sh  build_v0911_anrm_trace_dataset.py  build_v0916_workflow_metric_backfill_inventory.py  burst_continue.sh  burst_worktree.sh  card_paths.sh  card_prompt.sh  check_compression_finish_profiles.sh  check_coverage_impact.sh  check_csdlc_prompt_editor_browser.js  check_issue_goal_terminal_state.py  check_issue_metadata_parity.sh  check_milestone_closed_issue_sor_truth.sh  check_no_new_legacy_swarm_refs.sh  check_no_tracked_adl_issue_record_residue.sh  check_pr_closing_linkage.sh  check_release_notes_commands.sh  check_release_version_surfaces.sh  check_repo_quality_staleness.py  check_v090_milestone_state.py  ci_path_policy.sh  clean_coverage_artifacts.sh  closeout_completed_issue_wave.sh  codex_pr.sh  codexw.sh  compute_ccc_v0.py  default.rules.profiles.example  demo_adaptive_godel_loop.sh  demo_aee_bounded_adaptation.sh  demo_affect_engine.sh  demo_affect_godel_vertical_slice.sh  (+453 more)
swarm/: .gitignore  CODEX_PLAYBOOK.md  CONTRIBUTING.md  Cargo.toml  DESIGN_GOALS.md  README.md  RELEASE_CHECKLIST_v0.2.md  RELEASE_NOTES_v0.2.md  RELEASE_NOTES_v0.3.md  coverage.sh
swarm/docs/: issue-0095-noop.md
swarm/examples/: README.md  adl-0.1.yaml  failure-missing-file.adl.yaml  override-precedence.adl.yaml  populate_docs.sh  v0-2-coordinator-agents-sdk.adl.yaml  v0-2-coordinator-agents-sdk.md  v0-2-failure-unknown-field.adl.yaml  v0-2-multi-step-basic.adl.yaml  v0-2-multi-step-file-input.adl.yaml  v0-3-aee-recovery-adapted.adl.yaml  v0-3-concurrency-fork-join.adl.yaml  v0-3-concurrency-fork-join.md  v0-3-demo-a-say-mcp.adl.yaml  v0-3-fork-join-seq-run.adl.yaml  v0-3-fork-join-seq-run.md  v0-3-on-error-retry.adl.yaml  v0-3-on-error-retry.md  v0-3-remote-http-provider.adl.yaml  v0-3-remote-http-provider.md  v0-3-remote-provider-demo.adl.yaml  v0-3-scheduler-max-concurrency.adl.yaml  v0-4-demo-bounded-parallelism.adl.yaml  v0-4-demo-deterministic-replay.adl.yaml  v0-4-demo-fork-join-swarm.adl.yaml  v0-5-composition-include-fragment.adl.yaml  v0-5-composition-include-root.adl.yaml  v0-5-pattern-fork-join.adl.yaml  v0-5-pattern-linear.adl.yaml  v0-5-primitives-minimal.adl.yaml  v0-6-trace-sample-b.json  v0-7-hierarchical-planner.adl.yaml  v0-85-hitl-steering-demo.adl.yaml
swarm/schemas/: adl.schema.json  structured_implementation_prompt.contract.yaml  structured_output_record.contract.yaml  structured_task_prompt.contract.yaml
swarm/src/: adl.rs  (+29 more)
(+4387 files in other folders)
