[package]
name = "adl"
version = "0.90.5"
edition = "2021"
default-run = "adl"
license = "MIT OR Apache-2.0"
description = "ADL (Agent Design Language) reference runtime and CLI"

[lib]
name = "adl"
path = "src/lib.rs"

[[bin]]
name = "adl"
path = "src/main.rs"

[[bin]]
name = "adl-remote"
path = "src/bin/adl_remote.rs"

[features]
# Heavy runtime_v2 proof-materialization and CLI proof-smoke tests stay out of
# ordinary `cargo test` but remain covered by authoritative `--all-features`
# lanes such as cargo-llvm-cov.
slow-proof-tests = []
# Heavy `pr finish` temp-repo publication and sync integration tests stay out
# of ordinary `cargo test` but remain covered by authoritative `--all-features`
# lanes such as cargo-llvm-cov.
slow-finish-tests = []

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Single-assignment global init (for schema caching)
once_cell = "1.19"

# Serialization / parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Errors
anyhow = "1.0"
thiserror = "1.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP (blocking)
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }

# JSON Schema (Option A)
schemars = "0.8"
jsonschema = "0.17"
base64 = "0.22"
ed25519-dalek = "2.1"
rand = "0.8"
tiny_http = "0.12"
sha2 = "0.10"
