[package]
name = "adl"
version = "0.91.5"
edition = "2021"
default-run = "adl"
license = "MIT OR Apache-2.0"
description = "ADL (Agent Design Language) reference runtime and CLI"

[lib]
name = "adl"
path = "src/lib.rs"

[[bin]]
name = "adl"
path = "src/main.rs"

[[bin]]
name = "adl-csdlc"
path = "src/bin/adl_csdlc.rs"

[[bin]]
name = "adl-runtime"
path = "src/bin/adl_runtime.rs"

[[bin]]
name = "adl-review"
path = "src/bin/adl_review.rs"

[[bin]]
name = "adl-validate-structured-prompt"
path = "src/bin/adl_validate_structured_prompt.rs"

[[bin]]
name = "adl-lint-prompt-spec"
path = "src/bin/adl_lint_prompt_spec.rs"

[[bin]]
name = "adl-prompt-template"
path = "src/bin/adl_prompt_template.rs"

[[bin]]
name = "adl-pr-create"
path = "src/bin/adl_pr_create.rs"

[[bin]]
name = "adl-pr-init"
path = "src/bin/adl_pr_init.rs"

[[bin]]
name = "adl-pr-repair-issue-body"
path = "src/bin/adl_pr_repair_issue_body.rs"

[[bin]]
name = "adl-pr-run"
path = "src/bin/adl_pr_run.rs"

[[bin]]
name = "adl-pr-doctor"
path = "src/bin/adl_pr_doctor.rs"

[[bin]]
name = "adl-pr-ready"
path = "src/bin/adl_pr_ready.rs"

[[bin]]
name = "adl-pr-preflight"
path = "src/bin/adl_pr_preflight.rs"

[[bin]]
name = "adl-pr-finish"
path = "src/bin/adl_pr_finish.rs"

[[bin]]
name = "adl-pr-validation"
path = "src/bin/adl_pr_validation.rs"

[[bin]]
name = "adl-pr-closing-linkage"
path = "src/bin/adl_pr_closing_linkage.rs"

[[bin]]
name = "adl-issue"
path = "src/bin/adl_issue.rs"

[[bin]]
name = "adl-pr-closeout"
path = "src/bin/adl_pr_closeout.rs"

[[bin]]
name = "adl-remote"
path = "src/bin/adl_remote.rs"

[[bin]]
name = "adl-provider-adapter"
path = "tools/adl_provider_adapter.rs"

[features]
# Heavy runtime_v2 proof-materialization and CLI proof-smoke tests stay out of
# ordinary `cargo test` but remain covered by authoritative `--all-features`
# lanes such as cargo-llvm-cov.
slow-proof-runtime = []
slow-proof-private-state = []
slow-proof-observatory = []
slow-proof-security = []
slow-proof-tests = [
  "slow-proof-runtime",
  "slow-proof-private-state",
  "slow-proof-observatory",
  "slow-proof-security",
]
# Heavy `pr finish` temp-repo publication and sync integration tests stay out
# of ordinary `cargo test` but remain covered by authoritative `--all-features`
# lanes such as cargo-llvm-cov.
slow-finish-tests = []

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Single-assignment global init (for schema caching)
once_cell = "1.19"

# Serialization / parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
markdown = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Errors
anyhow = "1.0"
thiserror = "1.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP (blocking)
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }
octocrab = { version = "0.53", default-features = false, features = [
  "default-client",
  "jwt-rust-crypto",
  "rustls",
  "rustls-ring",
] }
# Shared async runtime floor for long-lived cadence, ACIP runtime work, and
# later bounded recurring verification on the existing ADL runtime.
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }

# JSON Schema (Option A)
schemars = "0.8"
jsonschema = "0.17"
base64 = "0.22"
ed25519-dalek = "2.1"
rand = "0.8"
tiny_http = "0.12"
sha2 = "0.10"

[dev-dependencies]
loom = "0.7"
