[package]
name = "swarm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ADL (Agent Design Language) v0.1 runner"

[lib]
path = "src/lib.rs"

[[bin]]
name = "swarm"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Single-assignment global init (for schema caching)
once_cell = "1.19"

# Serialization / parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Errors
anyhow = "1.0"
thiserror = "1.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP (blocking)
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }

# JSON Schema (Option A)
schemars = "0.8"
jsonschema = "0.17"
