[package]
name = "adl-aws-remote-validation-tool"
version = "0.91.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Standalone AWS Spot remote validation lane for ADL"

[[bin]]
name = "adl-aws-remote-validation"
path = "src/bin/adl_aws_remote_validation.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = "1"
aws-sdk-budgets = "1"
aws-sdk-costexplorer = "1"
aws-sdk-ec2 = "1"
aws-sdk-iam = "1"
aws-sdk-servicequotas = "1"
aws-sdk-ssm = "1"
aws-sdk-sts = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
